Add style to second page div

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .small {
-    width: 100px;
+    width: 150px;
 }
 
 .big {
@@ -88,4 +88,40 @@ h1 {
     font-size: 18px;
     font-weight: bold;
     border-style: none;
+}
+
+.h2-one {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
+.section-two {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    flex-wrap: nowrap;
+    margin-bottom: 80px;
+}
+
+.img-text {
+    display: flex;
+    direction: column;
+    flex-wrap: wrap;
+    justify-content: stretch;
+    width: 150px;
+}
+
+.subtext {
+    width: 150px;
+    text-align: center;
+}
+
+.quote {
+    background-color: #E5E7EB;
+    color: #1F2937;
+    font-size: 36px;
+    font-style: light italic;
+
 }
