--- a/style.css
+++ b/style.css
@@ -116,12 +116,28 @@ h1 {
 .subtext {
     width: 150px;
     text-align: center;
+    font-size: 16px;
 }
 
 .quote {
     background-color: #E5E7EB;
     color: #1F2937;
-    font-size: 36px;
-    font-style: light italic;
-
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    padding: 60px 100px;
+    flex-wrap: wrap;
+    gap: 20px;
 }
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+}
+
+.citation {
+    font-size: 20px;
+    font-weight: 900;
+}
+
